<resources>
    <string name="app_name">AppDev-Project</string>
    <string name="start">Start</string>
    <string name="example_question">Example Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="create_quiz">Create Quiz</string>

    <string-array name="quiz_categories">
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musical &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Entertainment: Cartoon &amp; Animations</item>
    </string-array>

    <string-array name="quiz_difficulties">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

    <string-array name="quiz_achievements">
        <item>Rookie(Easy): Answer 2 questions in a row correctly.</item>
        <item>Knowledge Seeker(Easy): Answer 5 questions in a row correctly.</item>
        <item>Quiz Enthusiast(Easy): Answer 10 questions in a row correctly.</item>
        <item>Sharp Mind(Easy): Answer 25 questions in a row correctly.</item>
        <item>Quiz Master(Easy): Answer 50 questions in a row correctly.</item>

        <item>Rookie(Medium): Answer 2 questions in a row correctly.</item>
        <item>Knowledge Seeker(Medium): Answer 5 questions in a row correctly.</item>
        <item>Quiz Enthusiast(Medium): Answer 10 questions in a row correctly.</item>
        <item>Sharp Mind(Medium): Answer 25 questions in a row correctly.</item>
        <item>Quiz Master(Medium): Answer 50 questions in a row correctly.</item>

        <item>Rookie(Hard): Answer 2 questions in a row correctly.</item>
        <item>Knowledge Seeker(Hard): Answer 5 questions in a row correctly.</item>
        <item>Quiz Enthusiast(Hard): Answer 10 questions in a row correctly.</item>
        <item>Sharp Mind(Hard): Answer 25 questions in a row correctly.</item>
        <item>Quiz Master(Hard): Answer 50 questions in a row correctly.</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_title">Category Title</string>
</resources>